# dfml

./: .gitignore  CMakeLists.txt  README.md  run.sh  test_run.sh
include/dfml/: dfml.hpp  tensor.hpp  trainer.hpp
include/dfml/autograd/: autograd_metadata.hpp  grad_guard.hpp  tensor_autograd.hpp
include/dfml/data/: data_loader.hpp
include/dfml/init/: init.hpp
include/dfml/internal/: storage.hpp  tensor_impl.hpp
include/dfml/layers/: activation.hpp  layer.hpp  layers.hpp  linear.hpp  sequential.hpp
include/dfml/ops/: add.hpp  matrix_multiply.hpp  matrix_transpose.hpp  ops.hpp
include/dfml/ops/activation/: relu.hpp  sigmoid.hpp  softmax.hpp  tanh.hpp
include/dfml/ops/loss/: cross_entropy_loss.hpp  loss_fn.hpp  mse_loss.hpp
include/dfml/optim/: adam.hpp  optim.hpp  optimizer.hpp  sgd.hpp
include/dfml/utils/: data.hpp  metrics.hpp  random.hpp  utils.hpp
src/: main.cpp
tests/: CMakeLists.txt  activation_test.cpp  layers_test.cpp  linear_ops_test.cpp  loss_test.cpp  optim_test.cpp  tensor_test.cpp
